--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,10 @@
+
+@font-face{
+    font-family: Butler;
+    src: url(./fonts/Butler_Regular.otf);
+}
+
+
 @mixin rightBorder (){
     border-right: 1px solid #e6e6e6;
 }
@@ -101,7 +108,7 @@ hr{
         .edge{
             color: white;
             position: absolute;
-            top: -37%;
+            top: -40px;
             right:4.25%;
             z-index: 1;
             font-size: 64px;
@@ -134,6 +141,72 @@ hr{
     left:46%;
     padding:1px 5px 2px 5px;
     border-radius: 50%;
+}
+#sidebar-cart{
+    box-shadow: 0px 0px 20px #dfd3c781;
+    display: none;
+    position: fixed;
+    top: 77px;
+    right:0%;
+    background-color: white;
+    border-left: 1px solid #ddccb8;
+    z-index: 20;
+    min-width: 25%;
+    h4{
+        color: $primary-color;
+        font-size: 18px;
+        padding-left: 20px;
+    }
+    hr{
+        height: 1px;
+        background-color: rgba(128, 128, 128, 0.308);
+        margin-right: 3%;
+    }
+    .sidebar-x-btn:after{
+        @extend .x-btn:after
+    }
+    .sidebar-grid{
+        padding-left: 20px;
+        display: grid;
+        grid-template-columns: 10% 40% 30% 20%;
+        align-items: center;
+        h3{
+            font-size: 16px;
+        }
+        p{
+            margin: 0;
+            font-size: 12px;
+        }
+        .sidebar-price{
+            font-size: 12px;
+        }
+    }
+    .sidebar-footer{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        align-items: center;
+        padding-top:18px;
+        padding-bottom: 18px;
+        p{
+            margin: 0;
+            padding-left: 20px;
+            color: $primary-color;
+        }
+        p:nth-child(2){
+            font-size: 18px;
+            font-weight: 700;
+            padding-top: 5px;
+        }
+        button{
+            background-color: $primary-color;
+            color: white;
+            padding:14px 25px;
+            cursor: pointer;
+            border:none;
+
+        }
+    }
+
 }
 .navbar{
     height: 77px;
@@ -192,7 +265,8 @@ hr{
                 }
             }
             .nav-item-5{
-                @include position(0, 29px, 17px);
+                width: 121.64px;
+                @include position(0, 0px, 17px);
                 @include rightBorder();
                 p{
                     color: $secondary-color;
@@ -288,13 +362,15 @@ animation-duration: 2s;
                 color: #9f765a;
             }   
             .header-title{
-                font-family: 'Ibarra Real Nova', serif;
+                // font-family: 'Ibarra Real Nova', serif;
+                font-family: "Butler";
                 max-width: 490px;
-                font-size: 81px;
+                font-size: 78px;
                 color: rgb(48, 64, 97);
                 line-height: 1.1;
-                padding:17px 0px 58.5px 0px;
-                letter-spacing: 1.8px;
+                padding:18px 0px 61.5px 2px;
+                letter-spacing: 4px;
+                line-height: 87px;
             }
             .explore-button{
                 border:none;
@@ -397,12 +473,14 @@ animation-duration: 2s;
 
 
     }
-    select{
+    .select{
         border:solid 1px #ddccb8;
         color: #b08b71;
-        font-size: 16px;
+        font-size: 15px;
+        letter-spacing: 1px;
         padding:10px 0px 11px 9px;
-        margin:0px 15px 30px 15px
+        margin:0px 15px 30px 15px;
+
     }
 }
 .x-btn:after {
@@ -453,7 +531,6 @@ animation-duration: 2s;
         align-items: center;
     }
 }
-
 .collection{
     padding-top:28px;
     min-height: 738px;
@@ -601,7 +678,7 @@ animation-duration: 2s;
                     padding-left:34px
                 }
                 img{
-                    padding-top: 6px;
+                    padding-top: 7px;
                     padding-left:3px;
                 }
                 h3{
@@ -609,7 +686,7 @@ animation-duration: 2s;
                     padding-bottom: 3px;
                 }
                 .table-subtext{
-                    padding-bottom: 3px;
+                    padding-bottom: 2px;
                     padding-left: 0.5px;
                 }
                 h5{
@@ -793,9 +870,6 @@ animation-duration: 2s;
                 }
 
             }
-
-
-
             .inc-dec-button{
                     display: grid;
                     grid-template-columns: 14% 86%;
@@ -821,7 +895,11 @@ animation-duration: 2s;
                 font-size: 15px;
                 font-weight: 700;
                 border:none;
-                padding:18px 22px 16px 30px;
+                cursor: pointer;
+                padding:18px 25px 16px 30px;
+                i{
+                    padding-left: 7px;
+                }
             }
             .added-to-cart-button{
                 @extend .add-to-cart-button;
@@ -1032,9 +1110,11 @@ animation-duration: 2s;
             left: -10.9%;
             h1{
                 color: $secondary-color;
-                font-size: 60px;
-                letter-spacing: 2.8px;
-                padding-left: 3px;
+                font-family: Butler;
+                font-size: 59px;
+                letter-spacing: 4.4px;
+                padding-left: 1px;
+                padding-top:2px
             }
             p{
                 padding-top: 6px;
@@ -1053,9 +1133,11 @@ animation-duration: 2s;
             right: -10.9%;
             h1{
                 color: white;
-                font-size: 60px;
-                letter-spacing: 2.8px;
+                font-family: Butler;
+                font-size: 59px;
+                letter-spacing: 4.2px;
                 padding-left: 1px;
+                padding-top: 3px;
             }
             p{
                 padding-top: 9px;
@@ -1084,15 +1166,15 @@ footer{
     display: grid;
     grid-template-columns: 440px 16px 530px 14px 440px;
     h2{
-        font-family: "Georgia", serif;
+        font-family: "Butler", serif;
         color: $primary-color;
-        font-size: 28px;
+        font-size: 27px;
     }
     .footer-item-1{
         padding-bottom: 42px;
         .footer-links{
-            padding-left: 168px;
-            letter-spacing: 9.1px;
+            padding-left: 170px;
+            letter-spacing: 11.8px;
         }
         div{
             text-align: center;
@@ -1138,9 +1220,10 @@ footer{
         text-align: center;
         color: $primary-color;
         h2{
+            font-family: "Butler", serif;
             padding-bottom: 43px;
-            letter-spacing: 8.9px;
-            padding-left: 6px;
+            letter-spacing: 11.55px;
+            padding-left: 10px;
         }
         p{
             font-size: 16px;
@@ -1173,7 +1256,7 @@ footer{
     .footer-item-3{
         h2{
             padding-left:58px;
-            letter-spacing: 8.85px;
+            letter-spacing: 12.1px;
             padding-bottom: 66px;
         }
         .footer-button{
@@ -1198,6 +1281,7 @@ footer{
             }
             .footer-right-arrow{
                 padding-left:18px;
+                cursor: pointer;
             }
         }
     }
